--- a/files/peiliang_li_-_hkust_aerial_robotics_group/styles.css
+++ b/files/peiliang_li_-_hkust_aerial_robotics_group/styles.css
@@ -117,7 +117,7 @@
 #u6 {
   position:absolute;
   left:170px;
-  top:693px;
+  top:729px;
   width:144px;
   height:28px;
 }
@@ -146,7 +146,7 @@
 #u8 {
   position:absolute;
   left:460px;
-  top:952px;
+  top:988px;
   width:759px;
   height:36px;
   line-height:18px;
@@ -168,7 +168,7 @@
 #u10 {
   position:absolute;
   left:170px;
-  top:926px;
+  top:962px;
   width:258px;
   height:163px;
 }
@@ -203,7 +203,7 @@
 #u12 {
   position:absolute;
   left:460px;
-  top:926px;
+  top:962px;
   width:840px;
   height:21px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -296,7 +296,7 @@
 #u15 {
   position:absolute;
   left:460px;
-  top:1144px;
+  top:1180px;
   width:840px;
   height:21px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -375,7 +375,7 @@
 #u17 {
   position:absolute;
   left:460px;
-  top:1175px;
+  top:1211px;
   width:759px;
   height:36px;
   line-height:18px;
@@ -410,7 +410,7 @@
 #u19 {
   position:absolute;
   left:460px;
-  top:1365px;
+  top:1401px;
   width:840px;
   height:21px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -489,7 +489,7 @@
 #u21 {
   position:absolute;
   left:460px;
-  top:1396px;
+  top:1432px;
   width:759px;
   height:36px;
   line-height:18px;
@@ -524,7 +524,7 @@
 #u23 {
   position:absolute;
   left:460px;
-  top:1588px;
+  top:1624px;
   width:840px;
   height:21px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -603,7 +603,7 @@
 #u25 {
   position:absolute;
   left:460px;
-  top:1619px;
+  top:1655px;
   width:759px;
   height:54px;
   line-height:18px;
@@ -706,7 +706,7 @@
 #u36 {
   position:absolute;
   left:170px;
-  top:1365px;
+  top:1401px;
   width:258px;
   height:165px;
 }
@@ -728,7 +728,7 @@
 #u38 {
   position:absolute;
   left:170px;
-  top:1588px;
+  top:1624px;
   width:258px;
   height:165px;
 }
@@ -750,7 +750,7 @@
 #u40 {
   position:absolute;
   left:460px;
-  top:1009px;
+  top:1045px;
   width:136px;
   height:80px;
 }
@@ -772,7 +772,7 @@
 #u42 {
   position:absolute;
   left:460px;
-  top:1450px;
+  top:1486px;
   width:135px;
   height:80px;
 }
@@ -794,7 +794,7 @@
 #u44 {
   position:absolute;
   left:605px;
-  top:1450px;
+  top:1486px;
   width:136px;
   height:80px;
 }
@@ -816,7 +816,7 @@
 #u46 {
   position:absolute;
   left:460px;
-  top:1228px;
+  top:1264px;
   width:136px;
   height:80px;
 }
@@ -838,7 +838,7 @@
 #u48 {
   position:absolute;
   left:606px;
-  top:1228px;
+  top:1264px;
   width:136px;
   height:80px;
 }
@@ -860,7 +860,7 @@
 #u50 {
   position:absolute;
   left:460px;
-  top:1673px;
+  top:1709px;
   width:136px;
   height:80px;
 }
@@ -882,7 +882,7 @@
 #u52 {
   position:absolute;
   left:614px;
-  top:1673px;
+  top:1709px;
   width:132px;
   height:80px;
 }
@@ -904,7 +904,7 @@
 #u54 {
   position:absolute;
   left:170px;
-  top:1144px;
+  top:1180px;
   width:258px;
   height:164px;
 }
@@ -948,7 +948,7 @@
 #u58 {
   position:absolute;
   left:170px;
-  top:1117px;
+  top:1153px;
   width:1019px;
   height:1px;
 }
@@ -970,7 +970,7 @@
 #u60 {
   position:absolute;
   left:170px;
-  top:1336px;
+  top:1372px;
   width:1019px;
   height:1px;
 }
@@ -992,7 +992,7 @@
 #u62 {
   position:absolute;
   left:170px;
-  top:1558px;
+  top:1594px;
   width:1019px;
   height:1px;
 }
@@ -1014,7 +1014,7 @@
 #u64 {
   position:absolute;
   left:170px;
-  top:1783px;
+  top:1819px;
   width:1019px;
   height:1px;
 }
@@ -1048,7 +1048,7 @@
 #u66 {
   position:absolute;
   left:911px;
-  top:1192px;
+  top:1228px;
   width:36px;
   height:19px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -1128,7 +1128,7 @@
 #u68 {
   position:absolute;
   left:849px;
-  top:1413px;
+  top:1449px;
   width:62px;
   height:19px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -1208,7 +1208,7 @@
 #u70 {
   position:absolute;
   left:890px;
-  top:1635px;
+  top:1671px;
   width:62px;
   height:19px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -1298,7 +1298,7 @@
 #u74 {
   position:absolute;
   left:170px;
-  top:742px;
+  top:778px;
   width:258px;
   height:132px;
 }
@@ -1320,7 +1320,7 @@
 #u76 {
   position:absolute;
   left:170px;
-  top:900px;
+  top:936px;
   width:1019px;
   height:1px;
 }
@@ -1350,7 +1350,7 @@
 #u78 {
   position:absolute;
   left:460px;
-  top:768px;
+  top:804px;
   width:759px;
   height:36px;
   line-height:18px;
@@ -1385,7 +1385,7 @@
 #u80 {
   position:absolute;
   left:460px;
-  top:742px;
+  top:778px;
   width:539px;
   height:26px;
   font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
@@ -1450,86 +1450,6 @@
   position:absolute;
   left:0px;
   top:0px;
-  width:179px;
-  height:23px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#FF3300;
-  line-height:21px;
-}
-#u82 {
-  position:absolute;
-  left:460px;
-  top:806px;
-  width:179px;
-  height:23px;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#FF3300;
-  line-height:21px;
-}
-#u82_div.mouseOver {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:179px;
-  height:23px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#FF3300;
-  line-height:21px;
-}
-#u82.mouseOver {
-}
-#u82_div.mouseDown {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:179px;
-  height:23px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
-  font-weight:700;
-  font-style:normal;
-  color:#FF3300;
-  line-height:21px;
-}
-#u82.mouseDown {
-}
-#u83 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:179px;
-  word-wrap:break-word;
-}
-#u84_div {
-  position:absolute;
-  left:0px;
-  top:0px;
   width:64px;
   height:28px;
   background:inherit;
@@ -1540,19 +1460,51 @@
   -webkit-box-shadow:none;
   box-shadow:none;
 }
-#u84 {
+#u82 {
   position:absolute;
   left:170px;
   top:506px;
   width:64px;
   height:28px;
 }
-#u85 {
+#u83 {
   position:absolute;
   left:0px;
   top:0px;
   width:64px;
   white-space:nowrap;
+}
+#u84_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:759px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:14px;
+  line-height:18px;
+}
+#u84 {
+  position:absolute;
+  left:170px;
+  top:615px;
+  width:759px;
+  height:18px;
+  font-size:14px;
+  line-height:18px;
+}
+#u85 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:759px;
+  word-wrap:break-word;
 }
 #u86_div {
   position:absolute;
@@ -1573,7 +1525,7 @@
 #u86 {
   position:absolute;
   left:170px;
-  top:580px;
+  top:645px;
   width:759px;
   height:18px;
   font-size:14px;
@@ -1586,53 +1538,21 @@
   width:759px;
   word-wrap:break-word;
 }
-#u88_div {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:759px;
-  height:18px;
-  background:inherit;
-  background-color:rgba(255, 255, 255, 0);
-  border:none;
-  border-radius:0px;
-  -moz-box-shadow:none;
-  -webkit-box-shadow:none;
-  box-shadow:none;
-  font-size:14px;
-  line-height:18px;
-}
-#u88 {
-  position:absolute;
-  left:170px;
-  top:609px;
-  width:759px;
-  height:18px;
-  font-size:14px;
-  line-height:18px;
-}
-#u89 {
-  position:absolute;
-  left:0px;
-  top:0px;
-  width:759px;
-  word-wrap:break-word;
-}
-#u90_img {
+#u88_img {
   position:absolute;
   left:0px;
   top:0px;
   width:1201px;
   height:2px;
 }
-#u90 {
+#u88 {
   position:absolute;
   left:74px;
-  top:660px;
+  top:696px;
   width:1200px;
   height:1px;
 }
-#u91 {
+#u89 {
   position:absolute;
   left:2px;
   top:-8px;
@@ -1640,7 +1560,7 @@
   visibility:hidden;
   word-wrap:break-word;
 }
-#u92_div {
+#u90_div {
   position:absolute;
   left:0px;
   top:0px;
@@ -1656,28 +1576,149 @@
   font-size:14px;
   line-height:18px;
 }
-#u92 {
+#u90 {
   position:absolute;
   left:170px;
-  top:549px;
+  top:585px;
   width:819px;
   height:18px;
   font-size:14px;
   line-height:18px;
 }
-#u93 {
+#u91 {
   position:absolute;
   left:0px;
   top:0px;
   width:819px;
   word-wrap:break-word;
 }
-#u94 {
+#u92 {
   position:absolute;
   left:372px;
-  top:548px;
+  top:584px;
   width:75px;
   height:20px;
   overflow:hidden;
   background-image:url('../../resources/images/transparent.gif');
+}
+#u93_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:759px;
+  height:18px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-size:14px;
+  line-height:18px;
+}
+#u93 {
+  position:absolute;
+  left:170px;
+  top:555px;
+  width:759px;
+  height:18px;
+  font-size:14px;
+  line-height:18px;
+}
+#u94 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:759px;
+  word-wrap:break-word;
+}
+#u95 {
+  position:absolute;
+  left:503px;
+  top:553px;
+  width:36px;
+  height:22px;
+  overflow:hidden;
+  background-image:url('../../resources/images/transparent.gif');
+}
+#u96_div {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  height:19px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#5A95BC;
+  line-height:21px;
+}
+#u96 {
+  position:absolute;
+  left:908px;
+  top:821px;
+  width:36px;
+  height:19px;
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#5A95BC;
+  line-height:21px;
+}
+#u96_div.mouseOver {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  height:19px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#5A95BC;
+  line-height:21px;
+}
+#u96.mouseOver {
+}
+#u96_div.mouseDown {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  height:19px;
+  background:inherit;
+  background-color:rgba(255, 255, 255, 0);
+  border:none;
+  border-radius:0px;
+  -moz-box-shadow:none;
+  -webkit-box-shadow:none;
+  box-shadow:none;
+  font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';
+  font-weight:700;
+  font-style:normal;
+  color:#5A95BC;
+  line-height:21px;
+}
+#u96.mouseDown {
+}
+#u97 {
+  position:absolute;
+  left:0px;
+  top:0px;
+  width:36px;
+  word-wrap:break-word;
 }
